# churn-retention-engine

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  code_of_conduct.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
src/data/: cleaning.py  feature_engineering.py  ingestion.py  splitting.py  validators.py
src/market/: alphavantage_client.py  finnhub_client.py  polygon_client.py
src/utils/: config_loader.py  io.py  logger.py  metrics.py  time.py
