# ============================================
# Customer Churn & Retention Engine
# Legacy Tool Configuration (Fallback)
# ============================================

[metadata]
name = churn-retention-engine
version = 1.0.0
description = Production-ready ML system for customer churn prediction
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/churn-retention-engine
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.11
install_requires =
    Flask>=3.0.0
    scikit-learn>=1.5.0
    xgboost>=2.1.0

[options.packages.find]
where = .
include = app*, src*
exclude = tests*, docs*

# ============================================
# Flake8 Linting
# ============================================
[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    env,
    build,
    dist,
    *.egg-info,
    migrations,
    .mypy_cache,
    .pytest_cache,
    .tox
per-file-ignores =
    __init__.py:F401
max-complexity = 10
docstring-convention = google

# ============================================
# Pydocstyle Documentation Style
# ============================================
[pydocstyle]
convention = google
match = (?!test_|__init__).*\.py
match-dir = ^(?!(tests|migrations|\.)).*

# ============================================
# Tool: Coverage (Legacy)
# ============================================
[coverage:run]
source = app,src
omit =
    */tests/*
    */__pycache__/*
    */migrations/*

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

# ============================================
# Tool: MyPy (Legacy Fallback)
# ============================================
[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[mypy-tests.*]
disallow_untyped_defs = False

# ============================================
# Tool: Pylint (Legacy Fallback)
# ============================================
[pylint.FORMAT]
max-line-length = 88

[pylint.MESSAGES CONTROL]
disable = C0103,C0114,C0115,C0116,R0903,R0913

# ============================================
# Tool: Isort (Legacy Fallback)
# ============================================
[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True